tests/sema/fail/v31_fail_cptr_empty_struct.ep
# COMPILE_FAIL_CONTAINS: cptr struct Empty must not be empty
struct Empty {}

fun main(): void {
    let value = new Empty
    let p = cptr(value)
}
